Small color and spacing fixes

--- a/css/main.css
+++ b/css/main.css
@@ -357,7 +357,7 @@ a.button.is-primary {
 }
 
 .bg-gray {
-    background: rgba(0, 0, 0, 0.02);
+    background: rgba(100, 131, 193, 0.06); /* #6483c1 */
 }
 
 .color-dark {
